Correction tablette et desktop

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -461,21 +461,29 @@ h2
 
 .main-article
     {
+
         h2
         {
             text-align: center;
             margin-bottom: 80px;
-        }
+        }     
 
-        ul
-            {
-                width: 65%;
-                display: flex;
-                justify-content: space-between;
-                flex-wrap: wrap;
-                margin-left: auto;
-                margin-right: auto;
+        article
+        {
+            width: 100%;
+            display: flex;
+            justify-content: center;
+        
+            ul
+                {
+                    width: 55%;
+                    display: flex;
+                    justify-content: space-between;
+                    align-items: center;
+                    flex-wrap: wrap;
+                }
             }
+        
     }
 
 .footer-container__content
@@ -496,13 +504,27 @@ h2
     width: 1340px;
     margin-left: auto;
     margin-right: auto;
+
+    img{
+        width: 70%;
+        margin-left: auto;
+        margin-right: auto;
+        border-top-left-radius: 25px;
+        border-top-right-radius: 25px;
+    }
+
+    &__decoration
+        {
+            display: none;
+        }
     
     .main-list-one
     {
         ul
         {
-            width: 70%;
+            max-width: 80%;
             display: flex;
+            flex-direction: row;
             justify-content: center;
             align-items: center;
             flex-wrap: wrap;
@@ -511,7 +533,7 @@ h2
 
                 li
                 {
-                    width: 35%
+                    max-width: 50%
                 }
                 
         }
@@ -558,8 +580,6 @@ h2
     &__decoration
         {
             min-width: 70%;
-            margin-left: auto;
-            margin-right: auto;
             left: 115px;
         }
 
